refactor: refactor location of static images

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -174,7 +174,7 @@ table {
 }
 
 .soccer-field {
-  background-image: url("../../public/assets/field.png");
+  background-image: url("../../public/images/field.png");
   background-size: cover;
   background-position: center;
 }
