fix: fix background color on field

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -174,6 +174,7 @@ table {
 }
 
 .soccer-field {
+  background-color: rgb(0, 0, 0);
   background-image: url("../../public/images/field.png");
   background-size: cover;
   background-position: center;
